--- a/0705~0710_seoul/index.html
+++ b/0705~0710_seoul/index.html
@@ -258,7 +258,7 @@
                 <a href="#">페이스북</a>
                 <a href="#">트위터</a>
                 <a href="#">인스타그램</a>
-                <a href="#">카카오스토리></a>
+                <a href="#">카카오스토리</a>
                 <a href="#">유튜브</a>
             </div>
         </div>
